--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@
 }
 #skillBox{
   transition: all 0.5s ease-in-out;
+  max-width:"22rem";
+  @media only screen and(max-width: 500px){
+    width:"15rem"
+  }
    
 }
 #desc{
